# heima

./: Makefile  README.md
.github/: dependabot.yml  (+2 more)
common/primitives/core/: Cargo.toml
common/primitives/core/macros/: Cargo.toml
common/primitives/core/src/: identity.rs  intent.rs  lib.rs  omni_account.rs
parachain/: Cargo.toml  rust-toolchain.toml
parachain/docker/: Dockerfile  entrypoint.sh  package.json
parachain/node/: Cargo.toml
parachain/node/res/chain_specs/: heima-plain.json  heima.json  litentry-plain.json  litentry.json  paseo-plain.json  paseo.json
parachain/node/src/: cli.rs  command.rs  fake_runtime_api.rs  main.rs  rpc.rs  service.rs  standalone_block_import.rs  tracing.rs
parachain/node/src/chain_specs/: heima.rs  litentry.rs  mod.rs  paseo.rs
parachain/pallets/account-fix/: Cargo.toml
parachain/pallets/account-fix/src/: lib.rs
parachain/pallets/bitacross/: Cargo.toml
parachain/pallets/bridge/assets-handler/: Cargo.toml
parachain/pallets/bridge/bridge-transfer/: Cargo.toml
parachain/pallets/bridge/chain-bridge/: Cargo.toml
parachain/pallets/bridge/common/: Cargo.toml
parachain/pallets/collab-ai/aiusd-convertor/: Cargo.toml
parachain/pallets/collab-ai/common/: Cargo.toml
parachain/pallets/collab-ai/curator/: Cargo.toml
parachain/pallets/collab-ai/guardian/: Cargo.toml
parachain/pallets/collab-ai/halving-mint/: Cargo.toml
parachain/pallets/collab-ai/investing-pool/: Cargo.toml
parachain/pallets/collab-ai/pool-proposal/: Cargo.toml
parachain/pallets/evm-address/: Cargo.toml
parachain/pallets/evm-address/src/: mock.rs  tests.rs
parachain/pallets/evm-assertions/: Cargo.toml
parachain/pallets/evm-assertions/src/: mock.rs
parachain/pallets/extrinsic-filter/: Cargo.toml
parachain/pallets/extrinsic-filter/src/: lib.rs  mock.rs  tests.rs  weights.rs
parachain/pallets/group/: Cargo.toml
parachain/pallets/group/src/: mock.rs  tests.rs
parachain/pallets/identity-management/: Cargo.toml
parachain/pallets/identity-management/src/: lib.rs  mock.rs  weights.rs
parachain/pallets/omni-account/: Cargo.toml
parachain/pallets/omni-account/runtime-api/: Cargo.toml
parachain/pallets/omni-account/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/omni-bridge/: Cargo.toml
parachain/pallets/omni-bridge/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/parachain-staking/: Cargo.toml
parachain/pallets/parachain-staking/src/: delegation_requests.rs  lib.rs  mock.rs  mock_zero_delay.rs  tests.rs  tests_zero_delay.rs  weights.rs
parachain/pallets/score-staking/: Cargo.toml
parachain/pallets/score-staking/src/: lib.rs  mock.rs
parachain/pallets/teebag/: Cargo.toml
parachain/pallets/teebag/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
parachain/pallets/vc-management/: Cargo.toml
parachain/pallets/vc-management/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
parachain/pallets/xcm-asset-manager/: Cargo.toml
parachain/pallets/xcm-asset-manager/src/: lib.rs  mock.rs  weights.rs
parachain/precompiles/assets-erc20/: Cargo.toml
parachain/precompiles/assets-erc20/src/: mock.rs  tests.rs
parachain/precompiles/bridge-transfer/: Cargo.toml
parachain/precompiles/collab-ai/curator/: Cargo.toml
parachain/precompiles/collab-ai/guardian/: Cargo.toml
parachain/precompiles/collab-ai/investing-pool/: Cargo.toml  InvestingPool.sol
parachain/precompiles/collab-ai/pool-proposal/: Cargo.toml  PoolProposal.sol
parachain/precompiles/parachain-staking/: Cargo.toml
parachain/precompiles/parachain-staking/src/: mock.rs
parachain/precompiles/score-staking/: Cargo.toml
parachain/precompiles/score-staking/src/: mock.rs
parachain/runtime/common/: Cargo.toml
parachain/runtime/common/src/: impls.rs  lib.rs  xcm_impl.rs
parachain/runtime/heima/: Cargo.toml
parachain/runtime/heima/src/: lib.rs  precompiles.rs  xcm_config.rs
parachain/runtime/litentry/: Cargo.toml
parachain/runtime/litentry/src/: asset_config.rs  lib.rs  xcm_config.rs
parachain/runtime/paseo/: Cargo.toml  build.rs
parachain/runtime/paseo/src/: asset_config.rs  lib.rs  precompiles.rs  xcm_config.rs
parachain/runtime/rococo/: Cargo.toml
parachain/runtime/rococo/src/: lib.rs  xcm_config.rs
parachain/scripts/: benchmark-weight-local.sh  benchmark-weight-remote.sh  build-docker.sh  clean-network.sh  fork-parachain-and-launch.sh  generate-prod-chain-spec.sh  generate-release-notes.sh  launch-bridge.sh  launch-network.sh  launch-standalone.sh  pre-commit.sh  run-ts-test.sh  runtime-upgrade.sh
parachain/scripts/geth/: run_geth.sh
parachain/scripts/ts-utils/: batch-transfer.ts  setup-enclave.ts  transfer-to-whitelist.ts  transfer.ts
parachain/ts-tests/: package.json  pnpm-lock.yaml
parachain/ts-tests/common/setup/: setup-bridge.ts
parachain/ts-tests/common/utils/: compile.ts  function.ts
parachain/ts-tests/integration-tests/: base-filter.test.ts  bridge.test.ts  evm-contract.test.ts  precompile-contract.test.ts  transaction-fee.test.ts  transfer.test.ts
parachain/zombienet/: config.toml
tee-worker/omni-executor/: .gitignore  .taplo.toml  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  enclave_key.pem  omni-executor.manifest.template
tee-worker/omni-executor/cli/: test.sh
tee-worker/omni-executor/crypto/: Cargo.toml
tee-worker/omni-executor/docker/: docker-compose.yml  omni-test.yml
tee-worker/omni-executor/executor-core/: Cargo.toml
tee-worker/omni-executor/executor-crypto/: Cargo.toml
tee-worker/omni-executor/executor-primitives/: Cargo.toml
tee-worker/omni-executor/executor-storage/: Cargo.toml
tee-worker/omni-executor/executor-worker/: Cargo.toml
tee-worker/omni-executor/heima-primitives/: Cargo.toml
tee-worker/omni-executor/native-call-executor/: Cargo.toml
tee-worker/omni-executor/native-task-handler/: Cargo.toml
tee-worker/omni-executor/oauth-providers/: Cargo.toml
tee-worker/omni-executor/primitives/: Cargo.toml
tee-worker/omni-executor/rpc/: Cargo.toml
tee-worker/omni-executor/rpc-server/: Cargo.toml
tee-worker/omni-executor/storage/: Cargo.toml
(+457 files in other folders)
