[workspace]
resolver = "2"
members = [
    'node',
    'pallets/account-fix',
    'pallets/bitacross',
    'pallets/bridge/assets-handler',
    'pallets/bridge/chain-bridge',
    'pallets/bridge/bridge-transfer',
    'pallets/bridge/common',
    'pallets/extrinsic-filter',
    'pallets/evm-address',
    'pallets/evm-assertions',
    'pallets/group',
    'pallets/identity-management',
    'pallets/parachain-staking',
    'pallets/score-staking',
    'pallets/teebag',
    'pallets/vc-management',
    'pallets/xcm-asset-manager',
    'pallets/omni-account',
    'pallets/omni-account/runtime-api',
    'precompiles/*',
    'runtime/litentry',
    'runtime/rococo',
    'runtime/paseo',
    'runtime/common',
]
exclude = []

[profile.release]
opt-level = 3
panic = "unwind"

[profile.dev]
# https://internals.rust-lang.org/t/help-test-faster-incremental-debug-macos-builds-on-nightly/14016
split-debuginfo = 'unpacked'

[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
inherits = "release"
lto = "thin"
strip = "symbols"
incremental = false

[workspace.dependencies]
async-trait = { version = "0.1.81" }
assert_matches = { version = "1.3.0" }
blake2-rfc = { version = "0.2.18", default-features = false }
base58 = { version = "0.2", default-features = false }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
der = { version = "0.6.0", default-features = false }
derive_more = { version = "0.99" }
env_logger = { version = "0.10.2" }
environmental = { version = "1.1.2", default-features = false }
getrandom = { version = "0.2.10", features = ["js"] }
evm = { version = "0.41.1", default-features = false }
impl-trait-for-tuples = { version = "0.2.2" }
log = { version = "0.4", default-features = false }
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "2" }
scale-info = { version = "2.11", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "=3.6.12", default-features = false, features = ["derive", "max-encoded-len"] }
parity-scale-codec-derive = { version = "=3.6.12", default-features = false, features = ["max-encoded-len"] }
paste = { version = "1.0" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "=1.0.128", default-features = false }
slices = { version = "0.2.0" }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
similar-asserts = { version = "1.6.0" }
sha3 = { version = "0.10", default-features = false }
futures = { version = "0.3.30", features = ["compat"] }
jsonrpsee = { version = "0.16.3", features = ["server"] }
tokio = { version = "1.40.0", features = ["macros", "sync"] }
strum = { version = "0.26", default-features = false }
strum_macros = { version = "0.26", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
num_enum = { version = "0.7.3", default-features = false }
num-integer = { version = "0.1", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
x509-cert = { version = "0.1.0", default-features = false, features = ["alloc"] }
ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
webpki = { version = "=0.102.2", git = "https://github.com/rustls/webpki", rev = "049e9d5", package = "rustls-webpki", default-features = false, features = ["alloc", "ring"] }

# cumulus client
cumulus-client-cli = { version = "0.12.0" }
cumulus-client-consensus-aura = { version = "0.12.0" }
cumulus-client-consensus-common = { version = "0.12.0" }
cumulus-client-network = { version = "0.12.0" }
cumulus-client-service = { version = "0.12.0" }
cumulus-relay-chain-inprocess-interface = { version = "0.12.0" }
cumulus-relay-chain-interface = { version = "0.12.0" }
cumulus-relay-chain-minimal-node = { version = "0.12.0" }
cumulus-test-relay-sproof-builder = { version = "0.12.0", default-features = false }

# evm-tracing, use the astar version to use "standard" substrate frame to avoid any conflicts
moonbeam-primitives-ext = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1", default-features = false }
moonbeam-rpc-debug = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1" }
moonbeam-rpc-primitives-debug = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1", default-features = false }
moonbeam-rpc-primitives-txpool = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1", default-features = false }
moonbeam-rpc-trace = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1" }
moonbeam-rpc-txpool = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1" }
moonbeam-evm-tracer = { git = "https://github.com/AstarNetwork/Astar", tag = "v5.43.1", default-features = false }

# polkadot client
polkadot-cli = { version = "12.0.0" }
polkadot-service = { version = "12.0.0" }

# frontier
fc-api = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm-precompile-blake2 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }
precompile-utils = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0", default-features = false }

# substrate client
sc-basic-authorship = { version = "0.39.0" }
sc-chain-spec = { version = "32.0.0" }
sc-cli = { version = "0.41.0" }
sc-client-api = { version = "33.0.0" }
sc-consensus = { version = "0.38.0" }
sc-consensus-aura = { version = "0.39.0" }
sc-executor = { version = "0.37.0" }
sc-network = { version = "0.39.0" }
sc-network-sync = { version = "0.38.0" }
sc-rpc = { version = "34.0.0" }
sc-service = { version = "0.40.0" }
sc-sysinfo = { version = "32.0.0" }
sc-telemetry = { version = "19.0.0" }
sc-tracing = { version = "33.0.0" }
sc-transaction-pool = { version = "33.0.0" }

substrate-prometheus-endpoint = { version = "0.17.0" }
substrate-frame-rpc-system = { version = "33.0.0" }
pallet-transaction-payment-rpc = { version = "35.0.0" }
sc-transaction-pool-api = { version = "33.0.0" }
substrate-build-script-utils = { version = "11.0.0" }

# wasm
sp-api = { version = "31.0.0", default-features = false }
sp-api-proc-macro = { version = "19.0.0", default-features = false }
sp-arithmetic = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "31.0.0", default-features = false }
sp-blockchain = { version = "33.0.0", default-features = false }
sp-consensus-aura = { version = "0.37.0", default-features = false }
sp-core = { version = "32.0.0", default-features = false }
sp-core-hashing = { version = "16.0.0", default-features = false }
sp-debug-derive = { version = "14.0.0", default-features = false }
sp-inherents = { version = "31.0.0", default-features = false }
sp-io = { version = "35.0.0", default-features = false, features = ["improved_panic_error_reporting", "disable_panic_handler"] }
sp-keystore = { version = "0.38.0", default-features = false }
sp-keyring = { version = "36.0.0", default-features = false }
sp-offchain = { version = "31.0.0", default-features = false }
sp-runtime = { version = "36.0.0", default-features = false }
sp-session = { version = "32.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-staking = { version = "31.0.0", default-features = false }
sp-state-machine = { version = "0.40.0", default-features = false }
sp-timestamp = { version = "31.0.0", default-features = false }
sp-trie = { version = "34.0.0", default-features = false }
sp-transaction-pool = { version = "31.0.0", default-features = false }
sp-version = { version = "34.0.0", default-features = false }
frame-executive = { version = "33.0.0", default-features = false }
frame-support = { version = "33.0.0", default-features = false }
frame-system = { version = "33.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "31.0.0", default-features = false }
frame-try-runtime = { version = "0.39.0", default-features = false }
pallet-assets = { version = "34.0.0", default-features = false }
pallet-asset-rate = { version = "12.0.0", default-features = false }
pallet-aura = { version = "32.0.0", default-features = false }
pallet-authorship = { version = "33.0.0", default-features = false }
pallet-balances = { version = "34.0.0", default-features = false }
pallet-bounties = { version = "32.0.0", default-features = false }
pallet-collective = { version = "33.0.0", default-features = false }
pallet-democracy = { version = "33.0.0", default-features = false }
pallet-identity = { version = "33.0.0", default-features = false }
pallet-indices = { version = "33.0.0", default-features = false }
pallet-membership = { version = "33.0.0", default-features = false }
pallet-message-queue = { version = "36.0.0", default-features = false }
pallet-multisig = { version = "33.0.0", default-features = false }
pallet-preimage = { version = "33.0.0", default-features = false }
pallet-proxy = { version = "33.0.0", default-features = false }
pallet-scheduler = { version = "34.0.0", default-features = false }
pallet-transaction-payment = { version = "33.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "33.0.0", default-features = false }
pallet-treasury = { version = "32.0.0", default-features = false }
pallet-vesting = { version = "33.0.0", default-features = false }
pallet-utility = { version = "33.0.0", default-features = false }
pallet-session = { version = "33.0.0", default-features = false }
pallet-sudo = { version = "33.0.0", default-features = false }
pallet-tips = { version = "32.0.0", default-features = false }
pallet-timestamp = { version = "32.0.0", default-features = false }
pallet-xcm = { version = "12.0.0", default-features = false }
parachains-common = { version = "12.0.0", default-features = false }
polkadot-runtime-common = { version = "12.0.0", default-features = false }
xcm = { version = "12.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "12.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "12.0.0", package = "staging-xcm-executor", default-features = false }
xcm-simulator = { version = "12.0.0", default-features = false }

polkadot-parachain-primitives = { version = "11.0.0", default-features = false }
polkadot-primitives = { version = "12.0.0", default-features = false }
polkadot-runtime-parachains = { version = "12.0.0", default-features = false }

cumulus-pallet-aura-ext = { version = "0.12.0", default-features = false }
cumulus-pallet-dmp-queue = { version = "0.12.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.12.0", default-features = false }
cumulus-pallet-xcm = { version = "0.12.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.12.0", default-features = false }
cumulus-primitives-core = { version = "0.12.0", default-features = false }
cumulus-primitives-timestamp = { version = "0.12.0", default-features = false }
cumulus-primitives-utility = { version = "0.12.0", default-features = false }
cumulus-primitives-parachain-inherent = { version = "0.12.0", default-features = false }
pallet-collator-selection = { version = "14.0.0", default-features = false }
parachain-info = { version = "0.12.0", package = "staging-parachain-info", default-features = false }

substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
# orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
# orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-traits = { version = "0.10.0", default-features = false }
orml-xtokens = { version = "0.10.0", default-features = false }

# benchmarking
frame-benchmarking = { version = "33.0.0", default-features = false }
frame-system-benchmarking = { version = "33.0.0", default-features = false }
frame-benchmarking-cli = { version = "37.0.0", default-features = false }
try-runtime-cli = { package = "try-runtime-core", git = "https://github.com/paritytech/try-runtime-cli", tag = "v0.7.0" }
cumulus-pallet-session-benchmarking = { version = "14.0.0", default-features = false }
substrate-wasm-builder = { version = "22.0.1" }

# local
core-primitives = { path = "../common/primitives/core", default-features = false }
litentry-macros = { path = "../common/primitives/core/macros" }
litentry-proc-macros = { path = "../common/primitives/core/proc-macros" }
litentry-hex-utils = { path = "../common/utils/hex", default-features = false }
runtime-common = { path = "runtime/common", default-features = false }
litentry-parachain-runtime = { path = "runtime/litentry", default-features = false }
rococo-parachain-runtime = { path = "runtime/rococo", default-features = false }
paseo-parachain-runtime = { path = "runtime/paseo", default-features = false }
pallet-account-fix = { path = "pallets/account-fix", default-features = false }
pallet-asset-manager = { path = "pallets/xcm-asset-manager", default-features = false }
pallet-assets-handler = { path = "pallets/bridge/assets-handler", default-features = false }
pallet-bitacross = { path = "pallets/bitacross", default-features = false }
pallet-chain-bridge = { path = "pallets/bridge/chain-bridge", default-features = false }
pallet-bridge-common = { path = "pallets/bridge/common", default-features = false }
pallet-bridge-transfer = { path = "pallets/bridge/bridge-transfer", default-features = false }
pallet-extrinsic-filter = { path = "pallets/extrinsic-filter", default-features = false }
pallet-group = { path = "pallets/group", default-features = false }
pallet-identity-management = { path = "pallets/identity-management", default-features = false }
pallet-omni-account = { path = "pallets/omni-account", default-features = false }
pallet-omni-account-runtime-api = { path = "pallets/omni-account/runtime-api", default-features = false }
pallet-parachain-staking = { path = "pallets/parachain-staking", default-features = false }
pallet-score-staking = { path = "pallets/score-staking", default-features = false }
pallet-teebag = { path = "pallets/teebag", default-features = false }
pallet-vc-management = { path = "pallets/vc-management", default-features = false }
pallet-evm-precompile-assets-erc20 = { path = "precompiles/assets-erc20", default-features = false }
pallet-evm-precompile-bridge-transfer = { path = "precompiles/bridge-transfer", default-features = false }
pallet-evm-precompile-parachain-staking = { path = "precompiles/parachain-staking", default-features = false }
pallet-evm-precompile-score-staking = { path = "precompiles/score-staking", default-features = false }
pallet-evm-assertions = { path = "pallets/evm-assertions", default-features = false }

[patch.crates-io]
getrandom = { git = "https://github.com/rust-random/getrandom", tag = "v0.2.10" }
governor = { git = "https://github.com/boinkor-net/governor", tag = "v0.6.0" }
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }

[patch."https://github.com/AstarNetwork/frontier"]
fc-api = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.11.0" }
